Completed base coding

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     </nav>
 
   <h2>Our Process</h2>
+  <img src="./resources/images/identify.svg" alt="img_identify">
+  <h3>Identify</h3>
+  <p>We focus on the most important details.</p>
+  <img src="./resources/images/understand.svg" alt="img_understand">
+  <h3>Understand</h3>
+  <p>We study our projects inside and out.</p>
+  <img src="./resources/images/execute.svg" alt="img_execute">
+  <p>We put everything we have into our work.</p>
+
+  <h3>Designed in New York</h3>
+
+  <h3>Portfolio</h3>
+  <p>Coming Soon</p>
+  <h3>Team</h3>
+  <p>We're Hiring!</p>
+  <h3>Contact</h3>
+  <p>Phone: (555)-555-5555</p>
+  <p>E-mail: test@example.com</p>
+  <p>Twitter:@test</p>
+
+  <p> &copy; Broadway 2016 Home About Work Team Contact</p>
 
 
 
