Completed but to be reviewed for finalization

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src="./resources/images/execute.svg" alt="img_execute">
   <p>We put everything we have into our work.</p>
 
-  <h3>Designed in New York</h3>
+  <h3 id="designedinNY">Designed in New York</h3>
 
   <div id="work">
     <h3>Portfolio</h3>
@@ -44,16 +44,20 @@
   <div id="contact">
     <h3>Contact</h3>
     <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
+    <p>E-mail: samyang8989@gmail.com</p>
     <p>Twitter:@test</p>
   </div>
 
-  <p> &copy; <span id="copyright">Broadway 2016</span> <a href="#home"><strong>Home</strong></a>
-    <a href="#about"><strong>About</strong></a> <a href="#work"><strong>Work</strong></a>
-    <a href="#team"><strong>Team</strong></a> <a href="#contact"><strong>Contact</strong></a></p>
+  <div id="copyright">
+    <nav>
+      <p><span id="copyrightlogo">&copy;Broadway 2016</span></p>
+      <p><a href="#home"><strong>Home</strong></a></p>
+      <p><a href="#about"><strong>About</strong></a></p>
+      <p><a href="#work"><strong>Work</strong></a></p>
+      <p><a href="#team"><strong>Team</strong></a></p>
+      <p><a href="#contact"><strong>Contact</strong></a></p>
 
-
-
+    </nav>
 
   </body>
 </html>
