Completed final review

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
   <div id="copyright">
     <nav>
-      <p><span id="copyrightlogo">&copy;Broadway 2016</span></p>
-      <p><a href="#home"><strong>Home</strong></a></p>
-      <p><a href="#about"><strong>About</strong></a></p>
-      <p><a href="#work"><strong>Work</strong></a></p>
-      <p><a href="#team"><strong>Team</strong></a></p>
-      <p><a href="#contact"><strong>Contact</strong></a></p>
+      <span id="copyrightlogo">&copy;Broadway 2016</span>
+      <a href="#home"><strong>Home</strong></a>
+      <a href="#about"><strong>About</strong></a>
+      <a href="#work"><strong>Work</strong></a>
+      <a href="#team"><strong>Team</strong></a>
+      <a href="#contact"><strong>Contact</strong></a>
 
     </nav>
 
